fix dropdown carets

--- a/test/visual/dropdown.html
+++ b/test/visual/dropdown.html
@@ -411,7 +411,7 @@
 
     <span class="dropdown d-inline-block">
         <button type="button" class="btn" data-cfw="dropdown">
-            Start <span class="caret" aria-hidden="true"></span>
+            Start <span class="caretstart" aria-hidden="true"></span>
         </button>
         <ul class="dropdown-menu dropstart">
             <li><a href="#">Action</a></li>
@@ -445,7 +445,7 @@
 
     <span class="dropdown d-inline-block">
         <button type="button" class="btn" data-cfw="dropdown">
-            End <span class="caret" aria-hidden="true"></span>
+            End <span class="caretend" aria-hidden="true"></span>
         </button>
         <ul class="dropdown-menu dropend">
             <li><a href="#">Action</a></li>
