Tab: Allow use of  `<button>`s
- Moved button reset in `.nav. to base `.nav-link`
- Expand valid parent to include `.nav` and `.list`
- Don't apply `role="tablist"` to `<nav>` parent
- Added a few more unit tests
- Removed unused wrapper from dev testing file
- Updated docs

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -1195,52 +1195,109 @@ $(window).ready(function() {
 
             <h2 id="tab">Tab:</h2>
 
-            <div class="bs-example bs-example-tabs">
-                <ul id="myTab" class="nav nav-tabs">
-                    <li class="nav-item"><a href="#tabpanel1" class="nav-link" data-cfw="tab">Tab 1</a></li>
-                    <li class="nav-item"><a href="#tabpanel2" class="nav-link active" data-cfw="tab">Tab 2</a></li>
-                    <li class="nav-item"><a href="#tabpanel3" class="nav-link" data-cfw="tab">Tab 3</a></li>
-                    <li class="nav-item"><a href="#tabpanel4" class="nav-link disabled" data-cfw="tab">Tab 4</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link" data-cfw="tab" data-cfw-tab-target="#tabpanel5" data-cfw-tab-animate="false">Tab 5</a></li>
-                </ul>
-                <div class="tab-content">
-                    <div class="tab-pane" id="tabpanel1">
-                        <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
-                        <p>This <button type="button"  class="btn" data-cfw="popover" title="A Title" data-cfw-popover-content="And here's some amazing content. It's very engaging. right?" data-cfw-popover-placement="forward">button</button> should trigger a popover on click.</p>
-                    </div>
-                    <div class="tab-pane" id="tabpanel2">
-                        <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit. Keytar helvetica VHS salvia yr, vero magna velit sapiente labore stumptown. Vegan fanny pack odio cillum wes anderson 8-bit, sustainable jean shorts beard ut DIY ethical culpa terry richardson biodiesel. Art party scenester stumptown, tumblr butcher vero sint qui sapiente accusamus tattooed echo park.</p>
-                    </div>
-                    <div class="tab-pane" id="tabpanel3">
-                        <div class="active bg-warning">active</div>
-                        <p>Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork. Williamsburg banh mi whatever gluten-free, carles pitchfork biodiesel fixie etsy retro mlkshk vice blog. Scenester cred you probably haven't heard of them, vinyl craft beer blog stumptown. Pitchfork sustainable tofu synth chambray yr.</p>
-                        <div class="row" data-cfw="equalize" data-cfw-equalize-target=".card">
-                            <div class="col-4">
-                                <div class="card">
-                                    Card
-                                </div>
+            <ul id="myTab" class="nav nav-tabs">
+                <li class="nav-item"><a href="#tabpanel1" class="nav-link" data-cfw="tab">Tab 1</a></li>
+                <li class="nav-item"><a href="#tabpanel2" class="nav-link active" data-cfw="tab">Tab 2</a></li>
+                <li class="nav-item"><a href="#tabpanel3" class="nav-link" data-cfw="tab">Tab 3</a></li>
+                <li class="nav-item"><a href="#tabpanel4" class="nav-link disabled" data-cfw="tab">Tab 4</a></li>
+                <li class="nav-item"><a href="#" class="nav-link" data-cfw="tab" data-cfw-tab-target="#tabpanel5" data-cfw-tab-animate="false">Tab 5</a></li>
+            </ul>
+            <div class="tab-content">
+                <div class="tab-pane" id="tabpanel1">
+                    <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+                    <p>This <button type="button"  class="btn" data-cfw="popover" title="A Title" data-cfw-popover-content="And here's some amazing content. It's very engaging. right?" data-cfw-popover-placement="forward">button</button> should trigger a popover on click.</p>
+                </div>
+                <div class="tab-pane" id="tabpanel2">
+                    <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit. Keytar helvetica VHS salvia yr, vero magna velit sapiente labore stumptown. Vegan fanny pack odio cillum wes anderson 8-bit, sustainable jean shorts beard ut DIY ethical culpa terry richardson biodiesel. Art party scenester stumptown, tumblr butcher vero sint qui sapiente accusamus tattooed echo park.</p>
+                </div>
+                <div class="tab-pane" id="tabpanel3">
+                    <div class="active bg-warning">active</div>
+                    <p>Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork. Williamsburg banh mi whatever gluten-free, carles pitchfork biodiesel fixie etsy retro mlkshk vice blog. Scenester cred you probably haven't heard of them, vinyl craft beer blog stumptown. Pitchfork sustainable tofu synth chambray yr.</p>
+                    <div class="row" data-cfw="equalize" data-cfw-equalize-target=".card">
+                        <div class="col-4">
+                            <div class="card">
+                                Card
                             </div>
-                            <div class="col-4">
-                                <div class="card">
-                                    Card<br>Card<br>Card<br>
-                                </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card">
+                                Card<br>Card<br>Card<br>
                             </div>
-                            <div class="col-4">
-                                <div class="card">
-                                    Card
-                                </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card">
+                                Card
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane" id="tabpanel4">
-                        <p>Trust fund seitan letterpress, keytar raw denim keffiyeh etsy art party before they sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold out farm-to-table VHS viral locavore cosby sweater. Lomo wolf viral, mustache readymade thundercats keffiyeh craft beer marfa ethical. Wolf salvia freegan, sartorial keffiyeh echo park vegan.</p>
+                </div>
+                <div class="tab-pane" id="tabpanel4">
+                    <p>Trust fund seitan letterpress, keytar raw denim keffiyeh etsy art party before they sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold out farm-to-table VHS viral locavore cosby sweater. Lomo wolf viral, mustache readymade thundercats keffiyeh craft beer marfa ethical. Wolf salvia freegan, sartorial keffiyeh echo park vegan.</p>
+                </div>
+                <div class="tab-pane" id="tabpanel5">
+                    <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+                    <div class="row">
+                        <div class="col-4">
+                            <img src="" data-cfw="lazy" data-cfw-lazy-src="../../site/assets/4.1/img/test.gif" alt="test pattern" style="border: 1px solid blue;" class="img-fluid">
+                        </div>
                     </div>
-                    <div class="tab-pane" id="tabpanel5">
-                        <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
-                        <div class="row">
-                            <div class="col-4">
-                                <img src="" data-cfw="lazy" data-cfw-lazy-src="../../site/assets/4.1/img/test.gif" alt="test pattern" style="border: 1px solid blue;" class="img-fluid">
+                </div>
+            </div>
+
+            <h3>Alternate Tab</h3>
+            <div id="myTabButtons" class="nav nav-tabs">
+                <button type="button" class="nav-link" data-cfw="tab" data-cfw-tab-target="#tabpanel1b">Tab 1</button>
+                <button type="button" class="nav-link active" data-cfw="tab" data-cfw-tab-target="#tabpanel2b">Tab 2</button>
+                <button type="button" class="nav-link" data-cfw="tab" data-cfw-tab-target="#tabpanel3b">Tab 3</button>
+                <button type="button" class="nav-link disabled" data-cfw="tab" data-cfw-tab-target="#tabpanel4b">Tab 4</button>
+                <button type="button" class="nav-link" data-cfw="tab" data-cfw-tab-target="#tabpanel5b" data-cfw-tab-animate="false">Tab 5</button>
+            </div>
+            <!--
+            <div id="myTabButtons" class="list list-horizontal">
+                <button type="button" class="list-item list-item-action" data-cfw="tab" data-cfw-tab-target="#tabpanel1b">Tab 1</button>
+                <button type="button" class="list-item list-item-action active" data-cfw="tab" data-cfw-tab-target="#tabpanel2b">Tab 2</button>
+                <button type="button" class="list-item list-item-action" data-cfw="tab" data-cfw-tab-target="#tabpanel3b">Tab 3</button>
+                <button type="button" class="list-item list-item-action" data-cfw="tab" data-cfw-tab-target="#tabpanel4b" disabled>Tab 4</button>
+                <button type="button" class="list-item list-item-action" data-cfw="tab" data-cfw-tab-target="#tabpanel5b" data-cfw-tab-animate="false">Tab 5</button>
+            </div>
+            -->
+            <div class="tab-content">
+                <div class="tab-pane" id="tabpanel1b">
+                    <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+                    <p>This <button type="button"  class="btn" data-cfw="popover" title="A Title" data-cfw-popover-content="And here's some amazing content. It's very engaging. right?" data-cfw-popover-placement="forward">button</button> should trigger a popover on click.</p>
+                </div>
+                <div class="tab-pane" id="tabpanel2b">
+                    <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit. Keytar helvetica VHS salvia yr, vero magna velit sapiente labore stumptown. Vegan fanny pack odio cillum wes anderson 8-bit, sustainable jean shorts beard ut DIY ethical culpa terry richardson biodiesel. Art party scenester stumptown, tumblr butcher vero sint qui sapiente accusamus tattooed echo park.</p>
+                </div>
+                <div class="tab-pane" id="tabpanel3b">
+                    <div class="active bg-warning">active</div>
+                    <p>Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork. Williamsburg banh mi whatever gluten-free, carles pitchfork biodiesel fixie etsy retro mlkshk vice blog. Scenester cred you probably haven't heard of them, vinyl craft beer blog stumptown. Pitchfork sustainable tofu synth chambray yr.</p>
+                    <div class="row" data-cfw="equalize" data-cfw-equalize-target=".card">
+                        <div class="col-4">
+                            <div class="card">
+                                Card
                             </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card">
+                                Card<br>Card<br>Card<br>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card">
+                                Card
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane" id="tabpanel4b">
+                    <p>Trust fund seitan letterpress, keytar raw denim keffiyeh etsy art party before they sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold out farm-to-table VHS viral locavore cosby sweater. Lomo wolf viral, mustache readymade thundercats keffiyeh craft beer marfa ethical. Wolf salvia freegan, sartorial keffiyeh echo park vegan.</p>
+                </div>
+                <div class="tab-pane" id="tabpanel5b">
+                    <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+                    <div class="row">
+                        <div class="col-4">
+                            <img src="" data-cfw="lazy" data-cfw-lazy-src="../../site/assets/4.1/img/test.gif" alt="test pattern" style="border: 1px solid blue;" class="img-fluid">
                         </div>
                     </div>
                 </div>
