--- a/test/visual/nav.html
+++ b/test/visual/nav.html
@@ -50,6 +50,15 @@
         <a class="nav-link disabled" href="#">Disabled</a>
     </nav>
 
+    <h2>Button</h2>
+
+    <div class="nav">
+        <button class="nav-link active" type="button">Active</button>
+        <button class="nav-link" type="button">Link</button>
+        <button class="nav-link" type="button">Another link</button>
+        <button class="nav-link" type="button" disabled>Disabled</button>
+    </div>
+
     <h2>Vertical List</h2>
 
     <ul class="nav nav-vertical">
